--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,5 +83,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
 
+    // Requests logging interceptor
+    implementation "com.squareup.okhttp3:logging-interceptor:4.8.0"
 
 }
